<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:id="@+id/landingscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0dp"
    android:background= "#ffffff"
    tools:context="com.example.pj.instrumistory.MainActivity">





    <ImageView
        android:contentDescription="@string/copyright"
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:src="@drawable/instrumistory"/>


    <Button
        android:layout_below="@id/logo"
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_marginBottom="20dp"
        android:onClick="enterApp"
        />


    <Button

        android:id="@+id/settings"
        android:layout_below="@id/enter"
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="goToSettings"/>

    <TextView
        android:layout_below="@id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/copyright"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>
