<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >



<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background= "#ffffff"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.pj.instrumistory.InstrumentActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/instrument_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:textAlignment="center"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <ImageView
        android:contentDescription="@string/instrument"
        android:id="@+id/instrument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instrument_toolbar"
        android:layout_marginBottom="-70dp"
        android:layout_marginTop="-70dp"
        />

    <TextView
        android:id="@+id/information"
        android:elevation="8dp"
        android:text="@string/info_def"
        android:layout_below="@id/instrument"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"/>


    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/playmusic"
        android:text="@string/play_music"
        android:layout_below="@id/information"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/songtitle"
        android:text="Play Something!"
        android:textStyle="italic"
        android:layout_centerInParent="true"
        android:layout_below="@id/playmusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"/>



    <Button
        android:id="@+id/refresh"
        android:layout_centerInParent="true"
        android:text="@string/factgen"
        android:layout_below="@id/songtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginBottom="15dp"/>



    <TextView
        android:id="@+id/fact"
        android:text=""
        android:textStyle="italic"
        android:textColor="#000"
        android:layout_centerInParent="true"
        android:layout_below="@id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"/>

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/mapbutton"
        android:text="@string/origin"
        android:layout_centerInParent="true"
        android:layout_below="@id/fact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToMap"
        android:padding="15dp"/>

    <Button
        android:layout_below="@id/mapbutton"
        android:id="@+id/homePageReturn"
        android:text="Back"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="homePageReturn"
        android:layout_marginTop="15dp"/>






</RelativeLayout>
    </ScrollView>